# monolith

./: .gitignore  CMakeLists.txt  README.md  main.cpp  monolith.cpp  monolith.h  utils.cpp
include/: monolith.h  utils.h
